# mlops-cml-test

./: README.md  classification_report.txt  demo.nu  demo.ps1  demo.sh  pyproject.toml
.github/workflows/: cml.yaml
continuous_machine_learning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
simple_mlops/: train_model_cml.py
